# xl3-rs

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.ko.md  README.md
crates/xl3-core/: BENCH.md  CHANGELOG.md  Cargo.toml  README.md
crates/xl3-core/examples/: bench.rs  roundtrip.rs
crates/xl3-core/src/: directives.rs  errors.rs  eval.rs  functions.rs  introspect.rs  lib.rs  manifest.rs  output.rs  output_model.rs  plan.rs  render.rs  source.rs  styles.rs  value.rs
crates/xl3-core/tests/: conformance.rs
crates/xl3-wasm/: Cargo.toml  README.md
crates/xl3-wasm/src/: lib.rs
docs/: native-baseline.md  wasm-boundary.md
examples/demo/: README.md  index.html  main.js  worker.js
scripts/: measure-wasm.mjs  memory-stability.mjs
