[package]
name = "xl3-core"
version = "0.0.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Pure-Rust XLSX template rendering engine (acceleration core for xl3)"
publish = false

[dependencies]
anyhow = "1.0.102"
calamine = "0.35"
quick-xml = "0.39"
rust_xlsxwriter = "0.95"
# XLSX uses store + deflate only — turn off zstd / lzma / bzip2 etc.
# so the wasm32 build doesn't pull in a C-toolchain dependency that
# clang can't satisfy when targeting wasm32-unknown-unknown.
zip = { version = "7", default-features = false, features = ["deflate"] }

[dev-dependencies]

[lib]
path = "src/lib.rs"
