[package]
name = "xl3-wasm"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "WebAssembly wrapper around xl3-core for browser / Node consumers"
# Published to npm via wasm-pack — the rust source itself isn't on
# crates.io. Native Rust consumers should depend on `xl3-core` directly.
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
xl3-core = { path = "../xl3-core" }
# rust_xlsxwriter calls `SystemTime::now()` for workbook metadata, which
# panics on wasm32-unknown-unknown. Pulling it in here with the `wasm`
# feature routes that call through `js_sys::Date` instead. cargo unifies
# this with xl3-core's transitive dependency.
rust_xlsxwriter = { version = "0.95", features = ["wasm"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
anyhow = "1"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
debug = ["console_error_panic_hook"]

# wasm-pack invokes wasm-opt with these flags after Rust compilation —
# `-Oz` trades a small slice of speed for the smallest possible binary,
# the right call for a browser-distributed artifact (PLAN.md §5
# Phase 3 Task 3.3, target <2 MB).
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Oz', '--strip-debug', '--vacuum']
